--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lodash": "^4.17.3",
     "lowdb": "^0.14.0",
     "uuid": "^3.0.1",
-    "winston": "^2.3.0"
+    "winston": "^2.3.0",
+    "express-fileupload": "^0.1.2",
+    "cloudinary": "^1.8.0"
   },
   "engines": {
     "node": "6.9.1"
